--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# create and drop tables
+spring.jpa.hibernate.ddl-auto=create-drop
 
+# Oracle settings
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
